Actualización de estilos. Se agregó sección de servicios y también las respectivas imágenes. Modificación de estilos y nuevos colores de fondo.

--- a/index.html
+++ b/index.html
@@ -104,12 +104,7 @@
                 costo. <span>Eleva</span>
               </h1>
               <div class="d-flex">
-                <a href="#about" class="btn-get-started">¡Conócenos!</a>
-                <a
-                  href="https://www.youtube.com/watch?v=Y7f98aduVJ8"
-                  class="glightbox btn-watch-video d-flex align-items-center"
-                  ><i class="bi bi-play-circle"></i><span>Watch Video</span></a
-                >
+                <a href="#about" class="botonesPrincipales">¡Conócenos!</a>
               </div>
             </div>
           </div>
@@ -205,7 +200,7 @@
                     <h3>Sin preocupaciones</h3>
                     <p>
                       Nos ocupamos de cada detalle para que puedas disfrutar de
-                      la tranquilidad y enfocarte en tu crecimiento.x
+                      la tranquilidad y enfocarte en tu crecimiento.
                     </p>
                   </div>
                 </div>
@@ -224,62 +219,6 @@
           <span class="description-title">hacemos</span>
         </div>
       </div>
-      <!-- Features Section -->
-      <section id="features" class="features section">
-        <div class="container">
-          <div class="row gy-4">
-            <div
-              class="col-lg-3 col-md-4"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="features-item">
-                <i class="bi bi-eye" style="color: #ffbb2c"></i>
-                <h3>
-                  <a href="" class="stretched-link"
-                    >Cuentanos sobre tu proyecto o tus necesidades</a
-                  >
-                </h3>
-              </div>
-            </div>
-            <!-- End Feature Item -->
-
-            <div
-              class="col-lg-3 col-md-4"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <div class="features-item">
-                <i class="bi bi-infinity" style="color: #5578ff"></i>
-                <h3>
-                  <a href="" class="stretched-link"
-                    >Creamos una propuesta personalizada</a
-                  >
-                </h3>
-              </div>
-            </div>
-            <!-- End Feature Item -->
-
-            <div
-              class="col-lg-3 col-md-4"
-              data-aos="fade-up"
-              data-aos-delay="300"
-            >
-              <div class="features-item">
-                <i class="bi bi-mortarboard" style="color: #e80368"></i>
-                <h3>
-                  <a href="" class="stretched-link"
-                    >Asignamos tu equipo y empieza a escalar tus operaciones</a
-                  >
-                </h3>
-              </div>
-            </div>
-
-            <!-- End Feature Item -->
-          </div>
-        </div>
-      </section>
-      <!-- /Features Section -->
 
       <!-- Testimonials Section -->
       <section id="testimonials" class="testimonials section dark-background">
@@ -335,12 +274,12 @@
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img
-                    src="assets/img/testimonials/solucion1.jpg"
+                    src="assets/img/testimonials/solucion2.jpg"
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>¿En qué podemos ayudarte?</h3>
-                  <h4>Cuentanos sobre tu proyecto o tus necesidades</h4>
+                  <h3>¿Como pódemos impulsar tu proyecto?</h3>
+                  <h4>Creamos una propuesta personalizada</h4>
                   <div class="stars">
                     <button class="conocerMasServicios">
                       <a href="#" class="read-more"><span>Conocer más</span></a>
@@ -348,9 +287,9 @@
                   </div>
                   <p>
                     <span
-                      >Explora cómo nuestros servicios pueden adaptarse a tus
-                      necesidades específicas y ayudarte a alcanzar tus
-                      objetivos.</span
+                      >Entendemos que cada proyecto es único. Cuéntanos tus
+                      necesidades y te ayudaremos a diseñar una solución a
+                      medida.</span
                     >
                   </p>
                 </div>
@@ -360,12 +299,14 @@
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img
-                    src="assets/img/testimonials/solucion1.jpg"
+                    src="assets/img/testimonials/solucion3.jpg"
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>¿En qué podemos ayudarte?</h3>
-                  <h4>Cuentanos sobre tu proyecto o tus necesidades</h4>
+                  <h3>Potencia y escala tu crecimiento</h3>
+                  <h4>
+                    Asignamos tu equipo y empieza a escalar tus operaciones
+                  </h4>
                   <div class="stars">
                     <button class="conocerMasServicios">
                       <a href="#" class="read-more"><span>Conocer más</span></a>
@@ -373,9 +314,9 @@
                   </div>
                   <p>
                     <span
-                      >Explora cómo nuestros servicios pueden adaptarse a tus
-                      necesidades específicas y ayudarte a alcanzar tus
-                      objetivos.</span
+                      >Te proporcionamos las herramientas y el equipo necesario
+                      para que tu negocio crezca de manera eficiente y
+                      efectiva.</span
                     >
                   </p>
                 </div>
@@ -400,9 +341,7 @@
                 data-aos="fade-up"
                 data-aos-delay="100"
               >
-                <h3>
-                  <span>Frequently Asked </span><strong>Questions</strong>
-                </h3>
+                <h3><span>Preguntas </span><strong>Frecuentes</strong></h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -470,22 +409,9 @@
                 <!-- End Faq item-->
               </div>
             </div>
-
-            <div class="col-lg-5 order-1 order-lg-2">
-              <img
-                src="assets/img/faq.jpg"
-                class="img-fluid"
-                alt=""
-                data-aos="zoom-in"
-                data-aos-delay="100"
-              />
-            </div>
           </div>
         </div>
       </section>
-      <!-- /Faq Section -->
-
-      <!-- Contact Section -->
       <section id="contact" class="contact section">
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
